--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,6 +1,4 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
+# This workflow will build the packages using Maven
 name: Maven Package
 
 on:
@@ -18,9 +16,6 @@ jobs:
       packages: write
 
     steps:
-      - name: Check pre-build environment
-        run: df
-
       - name: check out the main branch
         uses: actions/checkout@v3
 
@@ -45,7 +40,3 @@ jobs:
           name: Package
           path: staging
 
-      - name: Publish to GitHub Packages Apache Maven
-        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
