--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>org.metabit.platform.interfacing</groupId>
-	<artifactId>jjournal</artifactId>
-	<version>0.3.1</version>
-	<packaging>jar</packaging>
 	<name>Java journald API</name>
-	<description>
-		Java API for reading systemd-journald logfiles
-	</description>
 	<url>https://github.com/meta-bit/jjournal</url>
 	<licenses>
 		<license>
@@ -27,16 +19,31 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<description>
+		Java API for reading systemd-journald logfiles
+	</description>
+	<groupId>org.metabit.platform.interfacing</groupId>
+	<artifactId>jjournal</artifactId>
+	<version>0.3.2-SNAPSHOT</version>
 	<organization>
 		<name>metabit</name>
-		<url>https://www.metabit.com/</url>
+		<url>https://metabit.com/</url>
 	</organization>
+	<developers>
+		<developer>
+			<name>JW</name>
+			<!-- email => spam risk. please contact via website -->
+			<organization>metabit</organization>
+			<organizationUrl>https://metabit.org/</organizationUrl>
+		</developer>
+	</developers>
+	<packaging>jar</packaging>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>com.github.jnr</groupId>
 			<artifactId>jnr-ffi</artifactId>
@@ -67,16 +74,25 @@
 					<execution>
 						<id>attach-sources</id>
 						<goals>
-							<goal>jar</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
+
 			<!-- Generates JavaDocs during package stage -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.4.0</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<!-- two lines to keep JavaDoc from getting confused by the Java 9 module-info.file. -->
@@ -88,14 +104,6 @@
 						:org.metabit.platform.interfacing.jnrffi.JNRFFI_SD_ID128_T
 					</excludePackageNames>
 				</configuration>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<!-- allow for module-info while still compiling it in -->
@@ -193,6 +201,11 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+	<scm>
+		<connection>scm:git:git@github.com:meta-bit/jjournal.git</connection>
+	</scm>
 	<repositories>
 		<repository>
 			<id>space-maven</id>
@@ -205,5 +218,17 @@
 			<name>meta-bit</name>
 			<url>https://maven.pkg.github.com/meta-bit/jjournal</url>
 		</repository>
+	<!-- deployment according to Sonatype -->
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<!-- repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Nexus Release Repository</name>
+			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository -->
+		<downloadUrl>https://github.com/meta-bit/jjournal</downloadUrl>
 	</distributionManagement>
 </project>
