--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<repository-owner>meta-bit</repository-owner>
+		<repository-name>jjournal</repository-name>
+		<branch-name>main</branch-name>
+		<github.global.server>github</github.global.server>
 	</properties>
 
 	<dependencies>
@@ -199,14 +203,36 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+
+
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>
+						internal.repo::default::file://${project.build.directory}/mvn-artifact
+					</altDeploymentRepository>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 
+	<!-- primary distribution to github -->
 	<scm>
-		<connection>scm:git:git@github.com:meta-bit/jjournal.git</connection>
+		<url>https://github.com/${repository-owner}/${repository-name}.git</url>
+		<connection>scm:git:git@github.com:${repository-owner}/${repository-name}.git</connection>
+		<developerConnection>scm:git:git@github.com:${repository-owner}/${repository-name}.git</developerConnection>
 	</scm>
 	<repositories>
+		<repository>
+			<id>github-maven</id>
+			<url>https://github.com/${repository-owner}/${repository-name}/${branch-name}</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
 		<repository>
 			<id>space-maven</id>
 			<url>https://maven.pkg.jetbrains.space/metabit/p/jjournal/maven</url>
@@ -214,11 +240,10 @@
 	</repositories>
 	<distributionManagement>
 		<repository>
-			<id>github</id>
-			<name>meta-bit</name>
-			<url>https://maven.pkg.github.com/meta-bit/jjournal</url>
+			<id>ossrh</id>
+			<name>Central Repository OSSRH</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-	<!-- deployment according to Sonatype -->
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>Sonatype Nexus Snapshots</name>
