--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,12 @@
 <!--
   ~ Copyright (c) metabit 2022.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.metabit.platform.interfacing</groupId>
 	<artifactId>jjournal</artifactId>
-	<version>0.3.6-SNAPSHOT</version>
+	<version>0.3.6</version>
 	<packaging>jar</packaging>
 	<name>Java journald API</name>
 	<description>
@@ -33,7 +32,7 @@
 	</organization>
 	<scm>
 		<developerConnection>scm:git:https://github.com/meta-bit/jjournal.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>jjournal-0.3.6</tag>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
